--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--Header-->
     <header>
         <div class="container_header"> 
-            <img class="logo" src="Images_Booki\logo\Booki.png" alt="logo booki"/>
+            <img class="logo" src="Images/logo/Booki.png" alt="logo booki">
                 <nav class="link">
                      <ul>
                         <li>
@@ -36,7 +36,7 @@
                 <span><i id="location" class="fa-solid fa-location-dot"></i></span>
                 <input class="research_input" type="text" placeholder=Marseille,France>
                 <button class="button" type="submit"><strong>Rechercher</strong></button>
-                <i class=research_glass class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-magnifying-glass"></i>
             </form>
         </div>    
 <!--Filtres-->
@@ -59,11 +59,9 @@
         <div class="infos">
             <p><span><i class="fa-solid fa-info"></i></span>Plus de <a>500</a> logements disponibles dans cette ville</p>
         </div>
-    </div>
     </header>
 <main>
 <!--Cards Hébergements à Marseille-->
-<div class="container_hebergements_populaires">
 <section class="section_hebergements">
     <div class="section1_part1">
         <div class="title_sectionh2">
@@ -72,7 +70,7 @@
         <div class="container_card">
         <article class="card">
             <a href="#">
-                <img class=canebiere src="Images_Booki\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
+                <img class=canebiere src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
             <div class="section1_text">
                 <h3><b>Auberge La Canebière</b></h3>
                 <p>Nuit à partir de 25<b>€</b></p>
@@ -90,10 +88,10 @@
         </article>
         <article class="card">
             <a href="#">
-            <img class=port src="Images_Booki\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+            <img class=port src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
         <div class="section1_text">
                 <h3><b>Hôtel du port</b></h3>
-                <p>Nuit à partir de <a>5</a>2<b>€</b></p>
+                <p>Nuit à partir de 52<b>€</b></p>
             </div>
             <div>
                 <p class="star">
@@ -108,10 +106,10 @@
         </article>
         <article class="card">
             <a href="#">
-                <img class=mouettes src="Images_Booki\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
+                <img class=mouettes src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
             <div class="section1_text">
                 <h3><b>Hôtel Les mouettes</b></h3>
-                <p>Nuit à partir de <a>7</a>6<b>€</b></p>
+                <p>Nuit à partir de 76<b>€</b></p>
             </div>
             <div>
             <p class="star">
@@ -126,10 +124,10 @@
         </article>
         <article class="card">
             <a href="#">
-                <img class=mer src="Images_Booki\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                <img class=mer src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
             <div class="section1_text">   
                 <h3><b>Hôtel de la mer</b></h3>
-                <p>Nuit à partir de <a>4</a>6<b>€</b></p>
+                <p>Nuit à partir de 46<b>€</b></p>
             </div>
             <div>
                 <p class="star">
@@ -144,10 +142,10 @@
         </article>
         <article class="card">
             <a href="#">
-                <img class=panier src="Images_Booki\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le panier">
+                <img class=panier src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le panier">
             <div class="section1_text">
                 <h3><b>Auberge Le panier</b></h3>
-                <p>Nuit à partir de 2<a>3</a><b>€</b></p>
+                <p>Nuit à partir de 23<b>€</b></p>
             </div>
             <div>
             <p class="star">
@@ -162,10 +160,10 @@
         </article>
         <article class="card">
             <a href="#">
-                <img class=amina src="Images_Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel chez Amina">
+                <img class=amina src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel chez Amina">
             <div class="section1_text">
                 <h3><b>Hôtel Chez Amina</b></h3>
-                <p>Nuit à partir de <a>9</a>6<b>€</b></p>
+                <p>Nuit à partir de 96<b>€</b></p>
             </div>
             <div>
             <p class="star">
@@ -194,7 +192,7 @@
         </div>
                 <article class="card2">
                     <a href="#">
-                        <img src="Images_Booki\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                        <img src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
                  <div class="info_card2">
                         <h3><b>Hôtel Le soleil du matin</b></h3>
                         <p>Nuit à partir de 128 <b>€</b></p>
@@ -214,7 +212,7 @@
                 </article>
                 <article class="card2">
                     <a href="#">
-                        <img src="Images_Booki\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
+                        <img src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
                         <div class="info_card2">
                             <h3><b>Chambres d'hôtes Au coeur de l'eau</b></h3>
                             <p>Nuit à partir de 71<b>€</b></p>
@@ -234,7 +232,7 @@
                 </article>
                 <article class="card2">
                     <a href="#">
-                        <img src="Images_Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
+                        <img src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
                     <div class="info_card2">
                             <h3><b>Hôtel Bleu et Blanc</b></h3>
                             <p>Nuit à partir de 68<b>€</b></p>
@@ -261,7 +259,7 @@
             <div class="colonnes">
             <article class="img_h3">
                 <a href ="#">
-                    <img src="Images_Booki\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port">
+                    <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port">
                     <h3>Vieux Port</h3>
                 </a>
             </article>
@@ -269,7 +267,7 @@
             <div class="colonnes">
             <article class="img_h3">
                 <a href ="#">
-                    <img src="Images_Booki\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                    <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                     <h3>Fort de Pomègues</h3>
                 </a>
             </article>
@@ -277,7 +275,7 @@
             <div class="colonnes">
             <article class="img_h3">
                 <a href="#">
-                    <img src="Images_Booki\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
+                    <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
                     <h3>Parc national des Calanques</h3>
                  </a>
             </article>
@@ -285,7 +283,7 @@
             <div class="colonnes">
             <article class="img_h3">
                 <a href="#">
-                    <img src="Images_Booki\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                    <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                     <h3>Notre-Dame-de-la-Garde</h3>
                 </a>
             </article>
