--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <header>
         <div class="container_header"> 
             <img class="logo" src="Images/logo/Booki.png" alt="logo booki">
-                <nav class="link">
+                <nav>
                      <ul>
                         <li>
-                            <a class="link_1" href="#hebergements">Hébergements</a>
+                            <a href="#hebergements">Hébergements</a>
                         </li>
                         <li>
-                            <a class="link_2" href="#activites">Activités</a>
+                            <a href="#activites">Activités</a>
                         </li>
                     </ul>    
                 </nav>
@@ -62,6 +62,7 @@
     </header>
 <main>
 <!--Cards Hébergements à Marseille-->
+<div class="container_section_aside">
 <section class="section_hebergements">
     <div class="section1_part1">
         <div class="title_sectionh2">
@@ -251,6 +252,7 @@
                           </a>
                 </article>
          </aside>
+</div>
 <!--Activités à Marseille-->
 <section class="main_activites">
     <div class="Activites_a_marseille">
