--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 <!--informations-->
         <div class="infos">
-            <p><span><i class="fa-solid fa-info"></i></span>Plus de <a>500</a> logements disponibles dans cette ville</p>
+            <p><span><i class="fa-solid fa-info"></i></span>Plus de 500 logements disponibles dans cette ville</p>
         </div>
     </header>
 <main>
@@ -297,7 +297,7 @@
 <!--Footer-->
 <footer>
     <div class="footer_container">
-    <div class="footer_colonnes">
+    <div class="footer_colums">
         <h2>À propos</h2>
         <ul>
             <li>
@@ -311,7 +311,7 @@
             </li>
         </ul>
     </div>
-    <div class="footer_colonnes">
+    <div class="footer_colums">
         <h2>Nos hébergements</h2>
         <ul>
             <li>
@@ -322,7 +322,7 @@
             </li>
         </ul>
     </div>
-    <div class="footer_colonnes">
+    <div class="footer_colums">
         <h2>Assistance</h2>
         <ul>
             <li>
