--- a/index.html
+++ b/index.html
@@ -63,121 +63,121 @@
 <main>
 <!--Cards Hébergements à Marseille-->
 <div class="container_section_aside">
-    <div class="container_section">
-        <section class="section_hebergements">
-            <div class="title_sectionh2">
-                <h2>Hébergements à Marseille</h2>
-            </div>
-            <div class="container_card">
-                <article class="card">
-                    <a href="#">
-                    <img class=canebiere src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
-                        <div class="section1_text">
-                            <h3><b>Auberge La Canebière</b></h3>
-                            <p>Nuit à partir de 25<b>€</b></p>
-                        </div>    
-                        <div>
-                            <p class="star">
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star grey_star"></i> 
-                            </p>
-                        </div>
-                        </a>  
-                </article>
-                <article class="card">
-                    <a href="#">
-                    <img class=port src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
-                        <div class="section1_text">
-                            <h3><b>Hôtel du port</b></h3>
-                            <p>Nuit à partir de 52<b>€</b></p>
-                        </div>
-                        <div>
-                            <p class="star">
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star grey_star"></i> 
-                            </p>
-                        </div>
-                    </a>
-                </article>
-                <article class="card">
-                    <a href="#">
-                    <img class=mouettes src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
-                        <div class="section1_text">
-                            <h3><b>Hôtel Les mouettes</b></h3>
-                            <p>Nuit à partir de 76<b>€</b></p>
-                        </div>
-                        <div>
-                            <p class="star">
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star grey_star"></i> 
-                            </p>
-                        </div>
-                    </a>
-                </article>
-                <article class="card">
-                    <a href="#">
-                    <img class=mer src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
-                        <div class="section1_text">   
-                            <h3><b>Hôtel de la mer</b></h3>
-                            <p>Nuit à partir de 46<b>€</b></p>
-                        </div>
-                        <div>
-                            <p class="star">
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star grey_star"></i> 
-                            </p>
-                        </div> 
-                    </a>
-                </article>
-                <article class="card">
-                    <a href="#">
-                    <img class=panier src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le panier">
-                        <div class="section1_text">
-                            <h3><b>Auberge Le panier</b></h3>
-                            <p>Nuit à partir de 23<b>€</b></p>
-                        </div>
-                        <div>
-                            <p class="star">
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star grey_star"></i> 
-                            </p>
-                        </div>
-                    </a>
-                </article>
-                <article class="card">
-                    <a href="#">
-                    <img class=amina src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel chez Amina">
-                        <div class="section1_text">
-                            <h3><b>Hôtel Chez Amina</b></h3>
-                            <p>Nuit à partir de 96<b>€</b></p>
-                        </div>
-                        <div>
-                            <p class="star">
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star grey_star"></i>
-                            </p>
-                        </div>
-                    </a>
-                </article>
-            </div>
+<div class="container_section">
+    <section class="section_hebergements">
+        <div class="title_sectionh2">
+            <h2>Hébergements à Marseille</h2>
+        </div>
+        <div class="container_card">
+            <article class="card">
+                <a href="#">
+                <img class=canebiere src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
+                    <div class="section1_text">
+                        <h3><b>Auberge La Canebière</b></h3>
+                        <p>Nuit à partir de 25<b>€</b></p>
+                    </div>    
+                    <div>
+                        <p class="star">
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star grey_star"></i> 
+                        </p>
+                    </div>
+                    </a>  
+            </article>
+            <article class="card">
+                <a href="#">
+                <img class=port src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                    <div class="section1_text">
+                        <h3><b>Hôtel du port</b></h3>
+                        <p>Nuit à partir de 52<b>€</b></p>
+                    </div>
+                    <div>
+                        <p class="star">
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star grey_star"></i> 
+                        </p>
+                    </div>
+                </a>
+            </article>
+            <article class="card">
+                <a href="#">
+                <img class=mouettes src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
+                    <div class="section1_text">
+                        <h3><b>Hôtel Les mouettes</b></h3>
+                        <p>Nuit à partir de 76<b>€</b></p>
+                    </div>
+                    <div>
+                        <p class="star">
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star grey_star"></i> 
+                        </p>
+                    </div>
+                </a>
+            </article>
+            <article class="card">
+                <a href="#">
+                <img class=mer src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                    <div class="section1_text">   
+                        <h3><b>Hôtel de la mer</b></h3>
+                        <p>Nuit à partir de 46<b>€</b></p>
+                    </div>
+                    <div>
+                        <p class="star">
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star grey_star"></i> 
+                        </p>
+                    </div> 
+                </a>
+            </article>
+            <article class="card">
+                <a href="#">
+                <img class=panier src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le panier">
+                    <div class="section1_text">
+                        <h3><b>Auberge Le panier</b></h3>
+                        <p>Nuit à partir de 23<b>€</b></p>
+                    </div>
+                    <div>
+                        <p class="star">
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star grey_star"></i> 
+                        </p>
+                    </div>
+                </a>
+            </article>
+            <article class="card">
+                <a href="#">
+                <img class=amina src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel chez Amina">
+                    <div class="section1_text">
+                        <h3><b>Hôtel Chez Amina</b></h3>
+                        <p>Nuit à partir de 96<b>€</b></p>
+                    </div>
+                    <div>
+                        <p class="star">
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star grey_star"></i>
+                        </p>
+                    </div>
+                </a>
+            </article>
+        </div>
         <a>
             <p class="afficher">
             <strong>Afficher plus</strong>
@@ -258,6 +258,7 @@
 </aside>
 </div>
 <!--Activités à Marseille-->
+<div class="container_section_aside">
 <section class="main_activites">
     <div class="Activites_a_marseille">
         <h2 class="activites_marseille">Activités à Marseille</h2>
