--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
                             </div>      
                             <div class="star_populaires">
                                 <p>
-                                <span>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star grey_star"></i>
-                                </span>
+                                    <span>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star grey_star"></i>
+                                    </span>
                                 </p>
                             </div>
                         </a>
@@ -223,13 +223,13 @@
                             </div> 
                             <div class="star_populaires">
                                 <p>
-                                <span>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star grey_star"></i>  
-                                </span>
+                                    <span>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star grey_star"></i>  
+                                    </span>
                                 </p>
                             </div>
                         </a>
@@ -260,7 +260,7 @@
     </div>
     <!--Activités à Marseille-->
     <section class="main_activites">
-        <div class="Activites_a_marseille">
+        <div class="activites_a_marseille">
             <h2 class="activites_marseille">Activités à Marseille</h2>
                 <div class="images">
                     <div class="colonnes">
