--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" media="screen and (max-width: 992px)" href="./CSS/style_tablet.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./CSS/style_mobile.css">
     <title>Booki</title>
 </head>
 <body>
@@ -43,18 +44,18 @@
 <!--Filtres-->
         <div class="container">
             <h2>Filtres</h2>
-            <div>
-                <a><span><i class="fa-solid fa-money-bill-wave"></i></span>Economique</a>
-            </div>
-            <div>
-                <a><span><i class="fa-solid fa-child"></i></span>Familiale</a>
-            </div>
-            <div>
-                <a><span><i class="fa-solid fa-heart"></i></span>Romantique</a>
-            </div>
-            <div>
-                <a><span><i class="fa-solid fa-dog"></i></span>Animaux</a>
-            </div>
+                <div class="filtres_1">
+                    <a><span><i class="fa-solid fa-money-bill-wave"></i></span>Economique</a>
+                </div>
+                <div class="filtres_1">
+                    <a><span><i class="fa-solid fa-child"></i></span>Familial</a>
+                </div>
+                <div class="filtres_2">
+                    <a><span><i class="fa-solid fa-heart"></i></span>Romantique</a>
+                </div>
+                <div class="filtres_2">
+                    <a><span><i class="fa-solid fa-dog"></i></span>Animaux autorisés</a>
+                </div>
         </div>
 <!--informations-->
         <div class="infos">
@@ -222,7 +223,7 @@
                                 <p>Nuit à partir de 71<b>€</b></p>
                             </div> 
                             <div class="star_populaires">
-                                <p>
+                                <p class="p2">
                                     <span>
                                         <i class="fa-solid fa-star back_icon"></i>
                                         <i class="fa-solid fa-star back_icon"></i>
@@ -242,7 +243,7 @@
                                 <p>Nuit à partir de 68<b>€</b></p>
                             </div>
                             <div class="star_populaires">
-                                <p>
+                                <p class="p3">
                                     <span>
                                         <i class="fa-solid fa-star back_icon"></i>
                                         <i class="fa-solid fa-star back_icon"></i>
@@ -283,7 +284,7 @@
                         <article class="img_h3">
                             <a href="#">
                             <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
-                            <h3>Parc national des Calanques</h3>
+                            <h3 class="h3_3">Parc national des Calanques</h3>
                             </a>
                         </article>
                     </div>
@@ -291,7 +292,7 @@
                         <article class="img_h3">
                             <a href="#">
                             <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
-                            <h3>Notre-Dame-de-la-Garde</h3>
+                            <h3 class="h3_4">Notre-Dame-de-la-Garde</h3>
                             </a>
                         </article>
                     </div>
