--- a/index.html
+++ b/index.html
@@ -44,18 +44,19 @@
 <!--Filtres-->
         <div class="container">
             <h2>Filtres</h2>
-                <div class="filtres1">
-                    <a><span><i class="fa-solid fa-money-bill-wave"></i></span>Economique</a>
-                </div>
-                <div class="filtres1">
-                    <a><span><i class="fa-solid fa-child"></i></span>Familial</a>
-                </div>
-            
-                <div class="filtres1">
-                    <a><span><i class="fa-solid fa-heart"></i></span>Romantique</a>
-                </div>
-                <div class="filtres1">
-                    <a><span><i class="fa-solid fa-dog"></i></span>Animaux autorisés</a>
+                <div class="filtres">
+                    <div class="filtres1">
+                        <a><span><i class="fa-solid fa-money-bill-wave"></i></span>Economique</a>
+                    </div>
+                    <div class="filtres1">
+                        <a><span><i class="fa-solid fa-child"></i></span>Familial</a>
+                    </div>
+                    <div class="filtres1">
+                        <a><span><i class="fa-solid fa-heart"></i></span>Romantique</a>
+                    </div>
+                    <div class="filtres1">
+                        <a><span><i class="fa-solid fa-dog"></i></span>Animaux autorisés</a>
+                    </div>
                 </div>
         </div>
 <!--informations-->
