--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!--Header-->
     <header>
         <div class="container_header"> 
-            <img class="logo" src="Images/logo/Booki.png" alt="logo booki">
+            <img class="logo" src="Images/logo/Booki.png" alt="logo booki"/>
             <nav>
                 <ul>
                     <li>
@@ -30,38 +30,40 @@
                 </ul>    
             </nav>
         </div>
-        <div>
-            <h1 class="titre_1">Trouver votre hébergement pour des vacances de rêves</h1>
-            <p>En plein centre-ville ou en pleine nature</p>
-<!--Formulaire-->
-            <form method="post">
-                <span><i id="location" class="fa-solid fa-location-dot"></i></span>
-                <input class="research_input" type="text" placeholder="Marseille, France">
-                <button class="button" type="submit"><strong>Rechercher</strong></button>
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </form>
-        </div>    
-<!--Filtres-->
-        <div class="container">
-            <h2>Filtres</h2>
-                <div class="filtres">
-                    <div class="filtres1">
-                        <a><span><i class="fa-solid fa-money-bill-wave"></i></span>Economique</a>
+        <div class="header_infos">
+            <div>
+                <h1 class="titre_1">Trouver votre hébergement pour des vacances de rêves</h1>
+                <p>En plein centre-ville ou en pleine nature</p>
+        <!--Formulaire-->
+                <form method="post">
+                    <span><i id="location" class="fa-solid fa-location-dot"></i></span>
+                    <input class="research_input" type="text" placeholder="Marseille, France">
+                    <button class="button" type="submit"><strong>Rechercher</strong></button>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </form>
+            </div>    
+        <!--Filtres-->
+            <div class="container">
+                <h2>Filtres</h2>
+                    <div class="filtres">
+                        <div class="filtres1">
+                            <a><span><i class="fa-solid fa-money-bill-wave"></i></span>Economique</a>
+                        </div>
+                        <div class="filtres1">
+                            <a><span><i class="fa-solid fa-child"></i></span>Familial</a>
+                        </div>
+                        <div class="filtres1">
+                            <a><span><i class="fa-solid fa-heart"></i></span>Romantique</a>
+                        </div>
+                        <div class="filtres1">
+                            <a><span><i class="fa-solid fa-dog"></i></span>Animaux autorisés</a>
+                        </div>
                     </div>
-                    <div class="filtres1">
-                        <a><span><i class="fa-solid fa-child"></i></span>Familial</a>
-                    </div>
-                    <div class="filtres1">
-                        <a><span><i class="fa-solid fa-heart"></i></span>Romantique</a>
-                    </div>
-                    <div class="filtres1">
-                        <a><span><i class="fa-solid fa-dog"></i></span>Animaux autorisés</a>
-                    </div>
-                </div>
-        </div>
-<!--informations-->
-        <div class="infos">
-            <p><span><i class="fa-solid fa-info"></i></span>Plus de 500 logements disponibles dans cette ville</p>
+            </div>
+        <!--informations-->
+            <div class="infos">
+                <p><span><i class="fa-solid fa-info"></i></span>Plus de 500 logements disponibles dans cette ville</p>
+            </div>
         </div>
     </header>
 <main>
@@ -182,7 +184,7 @@
                         </a>
                     </article>
                 </div>
-                <a>
+                <a href="#">
                     <p class="afficher">
                     <strong>Afficher plus</strong>
                     </p>
