--- a/index.html
+++ b/index.html
@@ -205,9 +205,7 @@
                             <div class="info_card2">
                                 <h3>Hôtel Le soleil du matin</h3>
                                 <p>Nuit à partir de 128 <b>€</b></p>
-                            </div>      
-                            <div class="star_populaires">
-                                <p>
+                                <p class="p">
                                     <span>
                                         <i class="fa-solid fa-star back_icon"></i>
                                         <i class="fa-solid fa-star back_icon"></i>
@@ -225,9 +223,7 @@
                             <div class="info_card2">
                                 <h3>Chambres d'hôtes Au coeur de l'eau</h3>
                                 <p>Nuit à partir de 71<b>€</b></p>
-                            </div> 
-                            <div class="star_populaires">
-                                <p class="p2">
+                                <p class="p">
                                     <span>
                                         <i class="fa-solid fa-star back_icon"></i>
                                         <i class="fa-solid fa-star back_icon"></i>
@@ -245,9 +241,7 @@
                             <div class="info_card2">
                                 <h3>Hôtel Bleu et Blanc</h3>
                                 <p>Nuit à partir de 68<b>€</b></p>
-                            </div>
-                            <div class="star_populaires">
-                                <p class="p3">
+                                <p class="p">
                                     <span>
                                         <i class="fa-solid fa-star back_icon"></i>
                                         <i class="fa-solid fa-star back_icon"></i>
