--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!--Header-->
     <header>
         <div class="container_header"> 
-            <img class="logo" src="Images/logo/Booki.png" alt="logo booki"/>
+            <img class="logo" src="Images/logo/Booki.png" alt="logo booki">
             <nav>
                 <ul>
                     <li>
